--- a/src/about.html
+++ b/src/about.html
@@ -344,20 +344,28 @@
 								<div class="about-wedo__content">
 									<ul class="about-wedo__list">
 										<li>
-											<span>01</span>
-											<strong>exhibition stands</strong>
+											<a href="./project-detail.html">
+												<span>01</span>
+												<strong>exhibition stands</strong>
+											</a>
 										</li>
 										<li>
-											<span>02</span>
-											<strong>Museums&Exhibitions</strong>
+											<a href="./project-detail.html">
+												<span>02</span>
+												<strong>Museums&Exhibitions</strong>
+											</a>
 										</li>
 										<li>
-											<span>03</span>
-											<strong>Multimedia solutions</strong>
+											<a href="./project-detail.html">
+												<span>03</span>
+												<strong>Multimedia solutions</strong>
+											</a>
 										</li>
 										<li>
-											<span>04</span>
-											<strong>Showrooms&Displays</strong>
+											<a href="./project-detail.html">
+												<span>04</span>
+												<strong>Showrooms&Displays</strong>
+											</a>
 										</li>
 									</ul>
 									<div class="about-wedo__footer">
