--- a/src/about.html
+++ b/src/about.html
@@ -373,7 +373,7 @@
 											exhibition strategy and proposition development, through to booth design,
 											construction and event management. Our understanding of exhibition
 											management will deliver you the maximum effect.</div>
-										<button class="about-wedo__btn btn hover">Send massage<span></span></button>
+										<button class="about-wedo__btn btn hover">show more<span></span></button>
 									</div>
 								</div>
 								<div class="about-wedo__cards">
@@ -421,8 +421,8 @@
 											management.
 											Our understanding of exhibition management will deliver you the maximum
 											effect.</div>
-										<button class="about-wedo__accordion-btn btn hover">send
-											massage<span></span></button>
+										<button class="about-wedo__accordion-btn btn hover">show
+											more<span></span></button>
 									</div>
 								</div>
 								<div class="about-wedo__accordion-item">
@@ -454,8 +454,8 @@
 											management.
 											Our understanding of exhibition management will deliver you the maximum
 											effect.</div>
-										<button class="about-wedo__accordion-btn btn hover">send
-											massage<span></span></button>
+										<button class="about-wedo__accordion-btn btn hover">show
+											more<span></span></button>
 									</div>
 								</div>
 								<div class="about-wedo__accordion-item">
@@ -487,8 +487,8 @@
 											management.
 											Our understanding of exhibition management will deliver you the maximum
 											effect.</div>
-										<button class="about-wedo__accordion-btn btn hover">send
-											massage<span></span></button>
+										<button class="about-wedo__accordion-btn btn hover">show
+											more<span></span></button>
 									</div>
 								</div>
 							</div>
@@ -521,6 +521,7 @@
 						</div>
 					</div>
 				</section>
+				<!-- Контакты без карты -->
 				<section class="main-contacts">
 					<div class="main-contacts__container container">
 						<div class="main-contacts__inner">
