--- a/src/project-detail.html
+++ b/src/project-detail.html
@@ -230,6 +230,7 @@
 					</div>
 				</div>
 			</section>
+			<!-- Контакты без карты -->
 			<section class="main-contacts">
 				<div class="main-contacts__container container">
 					<div class="main-contacts__inner">
