--- a/src/main.html
+++ b/src/main.html
@@ -243,7 +243,8 @@
 					</div>
 				</div>
 			</section>
-			<section class="main-contacts">
+			<!-- Контакты без карты -->
+			<section class="main-contacts" hidden>
 				<div class="main-contacts__container container">
 					<div class="main-contacts__inner">
 						<div class="main-contacts__left">
@@ -321,9 +322,106 @@
 					</div>
 				</div>
 			</section>
+			<!-- Контакты с картой -->
+			<section class="contacts-map">
+				<div class="contacts-map__container container">
+					<div class="contacts-map__inner">
+						<div class="contacts-map__title h1">Be in touch</div>
+						<div class="contacts-map__content">
+							<div class="contacts-map__info mobile">
+								<div class="contacts-map__item text-18">
+									<div><a href="tel:+7 (495) 981-5000">+7 (495) 981-5000</a></div>
+									<div><a href="mailto:info@formika.ru">info@formika.ru</a></div>
+									<div>2nd Zvenigorodskaya str., 13, building 41, Moscow</div>
+								</div>
+								<a class="contacts-map__btn btn hover" href="#">join our team<span></span></a>
+							</div>
+							<div class="contacts-map__map"></div>
+							<div class="contacts-map__wrapper">
+								<div class="contacts-map__info desktop">
+									<div class="contacts-map__item text-18">
+										<div><a href="tel:+7 (495) 981-5000">+7 (495) 981-5000</a></div>
+										<div><a href="mailto:info@formika.ru">info@formika.ru</a></div>
+										<div>2nd Zvenigorodskaya str., 13, building 41, Moscow</div>
+									</div>
+									<a class="contacts-map__btn btn hover" href="#">join our team<span></span></a>
+								</div>
+								<form class="contacts-map__form form">
+									<div class="form-main">
+										<label class="form-label">
+											<input type="text" class="input" placeholder="name" data-required="true">
+										</label>
+										<label class="form-label">
+											<input type="email" class="input" placeholder="email" data-required="true">
+										</label>
+										<label class="form-label">
+											<input type="tel" class="input" placeholder="phone number"
+												data-required="true" data-min-length="true">
+										</label>
+										<label class="form-label">
+											<input type="text" class="input" placeholder="message">
+										</label>
+									</div>
+									<div class="form__footer">
+										<label class="form-label">
+											<input type="file" class="input-file"
+												accept=".jpg, .jpeg, .png, .gif, .webp" hidden>
+											<div class="custom-file">
+												<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+													viewBox="0 0 24 24" fill="none">
+													<path
+														d="M12.3297 12.1499L9.85969 14.6199C8.48969 15.9899 8.48969 18.1999 9.85969 19.5699C11.2297 20.9399 13.4397 20.9399 14.8097 19.5699L18.6997 15.6799C21.4297 12.9499 21.4297 8.50992 18.6997 5.77992C15.9697 3.04992 11.5297 3.04992 8.79969 5.77992L4.55969 10.0199C2.21969 12.3599 2.21969 16.1599 4.55969 18.5099"
+														stroke="#727272" stroke-width="1.5" stroke-linecap="round"
+														stroke-linejoin="round" />
+												</svg>
+												<span>add file</span>
+											</div>
+											<div class="custom-preview">
+												<div class="custom-preview__icon">
+													<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+														viewBox="0 0 24 24" fill="none">
+														<path
+															d="M12 22C17.5 22 22 17.5 22 12C22 6.5 17.5 2 12 2C6.5 2 2 6.5 2 12C2 17.5 6.5 22 12 22Z"
+															stroke="#727272" stroke-width="1.5" stroke-linecap="round"
+															stroke-linejoin="round" />
+														<path d="M7.75 12L10.58 14.83L16.25 9.16998" stroke="#727272"
+															stroke-width="1.5" stroke-linecap="round"
+															stroke-linejoin="round" />
+													</svg>
+												</div>
+												<div class="custom-preview__name"></div>
+												<div class="custom-preview__size"></div>
+											</div>
+										</label>
+										<button class="btn hover">send<span></span></button>
+									</div>
+								</form>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 			<include src="./components/footer.html"></include>
 		</div>
 	</div>
+	<!-- V V V Добавить если нужна карта в контактах V V V -->
+	<script src="https://api-maps.yandex.ru/v3/?apikey=ffac2b37-9f44-43d8-8e3e-92f15073c2d1&lang=ru_RU"></script>
+	<script>
+		init();
+		async function init() {
+			await ymaps3.ready;
+			const { YMap, YMapDefaultSchemeLayer } = ymaps3;
+
+			const map = new YMap(document.querySelector('.contacts-map__map'), {
+				location: {
+					center: [37.588144, 55.733842],
+					zoom: 16
+				}
+			});
+			map.addChild(new YMapDefaultSchemeLayer());
+		}
+	</script>
+	<!-- ^ ^ ^ -->
 </body>
 
 </html>
