--- a/src/project-detail.html
+++ b/src/project-detail.html
@@ -81,7 +81,7 @@
 							</div>
 						</a>
 						<a class="project-content__item small small--tr small--top" data-fancybox="gallery"
-							href="https://www.youtube.com/watch?v=5xG09d3WcGo">
+							href="/project-banner.webm" preload="auto">
 							<img src="./assets/images/project-detail/project-3.webp" alt="">
 							<div class="project-content__item-btn">
 								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
