--- a/src/main.html
+++ b/src/main.html
@@ -79,6 +79,24 @@
 								<div class="main-projects__content-item">
 									<img src="./assets/images/main/main-8.webp" alt="">
 								</div>
+								<div class="main-projects__content-hidden">
+									<div class="main-projects__content-item">
+										<img src="./assets/images/main/main-5.webp" alt="">
+									</div>
+									<div class="main-projects__content-item">
+										<img src="./assets/images/main/main-6.webp" alt="">
+									</div>
+									<div class="main-projects__content-item">
+										<video loop preload="auto" muted>
+											<source src="./assets/video/main-video.mp4" type="video/mp4">
+											<source src="./assets/video/main-video.webm" type="video/webm">
+										</video>
+										<img src="./assets/images/main/main-7.webp" alt="">
+									</div>
+									<div class="main-projects__content-item">
+										<img src="./assets/images/main/main-8.webp" alt="">
+									</div>
+								</div>
 								<div class="main-projects__content-item--null desktop">
 									<a class="main-projects__content-item--btn btn hover" href="#">show
 										more<span></span></a>
@@ -100,6 +118,24 @@
 								</div>
 								<div class="main-projects__content-item">
 									<img src="./assets/images/main/main-4.webp" alt="">
+								</div>
+								<div class="main-projects__content-hidden">
+									<div class="main-projects__content-item">
+										<img src="./assets/images/main/main-5.webp" alt="">
+									</div>
+									<div class="main-projects__content-item">
+										<img src="./assets/images/main/main-6.webp" alt="">
+									</div>
+									<div class="main-projects__content-item">
+										<video loop preload="auto" muted>
+											<source src="./assets/video/main-video.mp4" type="video/mp4">
+											<source src="./assets/video/main-video.webm" type="video/webm">
+										</video>
+										<img src="./assets/images/main/main-7.webp" alt="">
+									</div>
+									<div class="main-projects__content-item">
+										<img src="./assets/images/main/main-8.webp" alt="">
+									</div>
 								</div>
 								<div class="main-projects__content-item--null mobile">
 									<a class="main-projects__content-item--btn btn hover" href="#">show
