feat: service-detail

--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,8 @@
 					<li><a href="./project-detail.html" style="font-size: 5rem;">Детальная проекта</a></li>
 					<li><a href="./404.html" style="font-size: 5rem;">404</a></li>
 					<li><a href="./about.html" style="font-size: 5rem;">О компании</a></li>
-					<!-- <li><a href="./main.html" style="font-size: 5rem;">Главная</a></li> -->
-					<!-- <li><a href="./main.html" style="font-size: 5rem;">Главная</a></li> -->
+					<li><a href="./service-detail.html" style="font-size: 5rem;">Детальная услуги пункты</a></li>
+					<li><a href="./service-detail-text.html" style="font-size: 5rem;">Детальная услуги текст</a></li>
 					<!-- <li><a href="./main.html" style="font-size: 5rem;">Главная</a></li> -->
 					<!-- <li><a href="./main.html" style="font-size: 5rem;">Главная</a></li> -->
 				</ul>
