--- a/src/service-detail-text.html
+++ b/src/service-detail-text.html
@@ -49,29 +49,29 @@
 					<div class="services-banner__container container">
 						<div class="services-banner__inner desktop">
 							<ul class="services-banner__list desk">
-								<li>
-									<a href="./project-detail.html">
+								<li class="active">
+									<button type="button">
 										<span class="text-18">01</span>
 										<strong class="text-24">exhibition stands</strong>
-									</a>
+									</button>
 								</li>
 								<li>
-									<a href="./project-detail.html">
+									<button type="button">
 										<span class="text-18">02</span>
 										<strong class="text-24">Museums&Exhibitions</strong>
-									</a>
+									</button>
 								</li>
 								<li>
-									<a href="./project-detail.html">
+									<button type="button">
 										<span class="text-18">03</span>
 										<strong class="text-24">Multimedia solutions</strong>
-									</a>
+									</button>
 								</li>
 								<li>
-									<a href="./project-detail.html">
+									<button type="button">
 										<span class="text-18">04</span>
 										<strong class="text-24">Showrooms&Displays</strong>
-									</a>
+									</button>
 								</li>
 							</ul>
 							<div class="services-banner__content">
@@ -85,7 +85,7 @@
 									<a class="services-banner__btn btn hover">send message<span></span></a>
 								</div>
 								<div class="services-banner__cards">
-									<div class="services-banner__cards-img">
+									<div class="services-banner__cards-img active">
 										<img src="./assets/images/about/list-image-1.webp" alt="">
 									</div>
 									<div class="services-banner__cards-img">
@@ -172,54 +172,124 @@
 						</div>
 					</div>
 				</section>
-				<section class="main-projects services-cases">
-					<div class="main-projects__container container">
-						<div class="main-projects__inner">
-							<div class="main-projects__subtitle subtitle"><span></span> our cases</div>
-							<div class="main-projects__content">
-								<div class="main-projects__content-left">
-									<div class="main-projects__content-item">
+				<section class="services-cases">
+					<div class="services-cases__container container">
+						<div class="services-cases__inner">
+							<div class="services-cases__subtitle subtitle"><span></span> our cases</div>
+							<div class="services-cases__content">
+								<div class="services-cases__content-left">
+									<div class="services-cases__content-item">
 										<img src="./assets/images/main/main-5.webp" alt="">
 									</div>
-									<div class="main-projects__content-item">
+									<div class="services-cases__content-item">
 										<img src="./assets/images/main/main-6.webp" alt="">
 									</div>
-									<div class="main-projects__content-item">
+									<div class="services-cases__content-item">
 										<video loop preload="auto" muted>
 											<source src="./assets/video/main-video.mp4" type="video/mp4">
 											<source src="./assets/video/main-video.webm" type="video/webm">
 										</video>
 										<img src="./assets/images/main/main-7.webp" alt="">
 									</div>
-									<div class="main-projects__content-item">
+									<div class="services-cases__content-item">
 										<img src="./assets/images/main/main-8.webp" alt="">
 									</div>
-									<div class="main-projects__content-item--null desktop">
-										<a class="main-projects__content-item--btn btn hover" href="#">show
+									<div class="services-cases__content-hidden">
+										<div class="services-cases__content-item">
+											<img src="./assets/images/main/main-5.webp" alt="">
+										</div>
+										<div class="services-cases__content-item">
+											<img src="./assets/images/main/main-6.webp" alt="">
+										</div>
+										<div class="services-cases__content-item">
+											<video loop preload="auto" muted>
+												<source src="./assets/video/main-video.mp4" type="video/mp4">
+												<source src="./assets/video/main-video.webm" type="video/webm">
+											</video>
+											<img src="./assets/images/main/main-7.webp" alt="">
+										</div>
+										<div class="services-cases__content-item">
+											<img src="./assets/images/main/main-8.webp" alt="">
+										</div>
+									</div>
+									<div class="services-cases__content-item--null desktop">
+										<a class="services-cases__content-item--btn btn hover" href="#">show
 											more<span></span></a>
 									</div>
 								</div>
-								<div class="main-projects__content-right">
-									<div class="main-projects__content-item">
+								<div class="services-cases__content-right">
+									<div class="services-cases__content-item">
 										<img src="./assets/images/main/main-1.webp" alt="">
 									</div>
-									<div class="main-projects__content-item">
+									<div class="services-cases__content-item">
 										<video loop preload="auto" muted>
 											<source src="./assets/video/main-video.mp4" type="video/mp4">
 											<source src="./assets/video/main-video.webm" type="video/webm">
 										</video>
 										<img src="./assets/images/main/main-2.webp" alt="">
 									</div>
-									<div class="main-projects__content-item">
+									<div class="services-cases__content-item">
 										<img src="./assets/images/main/main-3.webp" alt="">
 									</div>
-									<div class="main-projects__content-item">
+									<div class="services-cases__content-item">
 										<img src="./assets/images/main/main-4.webp" alt="">
 									</div>
-									<div class="main-projects__content-item--null mobile">
-										<a class="main-projects__content-item--btn btn hover" href="#">show
-											more<span></span></a>
+									<div class="services-cases__content-hidden">
+										<div class="services-cases__content-item">
+											<img src="./assets/images/main/main-1.webp" alt="">
+										</div>
+										<div class="services-cases__content-item">
+											<video loop preload="auto" muted>
+												<source src="./assets/video/main-video.mp4" type="video/mp4">
+												<source src="./assets/video/main-video.webm" type="video/webm">
+											</video>
+											<img src="./assets/images/main/main-2.webp" alt="">
+										</div>
+										<div class="services-cases__content-item">
+											<img src="./assets/images/main/main-3.webp" alt="">
+										</div>
+										<div class="services-cases__content-item">
+											<img src="./assets/images/main/main-4.webp" alt="">
+										</div>
 									</div>
+								</div>
+								<div class="services-cases__content-hidden--mobile">
+									<div class="services-cases__content-item">
+										<img src="./assets/images/main/main-5.webp" alt="">
+									</div>
+									<div class="services-cases__content-item">
+										<img src="./assets/images/main/main-6.webp" alt="">
+									</div>
+									<div class="services-cases__content-item">
+										<video loop preload="auto" muted>
+											<source src="./assets/video/main-video.mp4" type="video/mp4">
+											<source src="./assets/video/main-video.webm" type="video/webm">
+										</video>
+										<img src="./assets/images/main/main-7.webp" alt="">
+									</div>
+									<div class="services-cases__content-item">
+										<img src="./assets/images/main/main-8.webp" alt="">
+									</div>
+									<div class="services-cases__content-item">
+										<img src="./assets/images/main/main-1.webp" alt="">
+									</div>
+									<div class="services-cases__content-item">
+										<video loop preload="auto" muted>
+											<source src="./assets/video/main-video.mp4" type="video/mp4">
+											<source src="./assets/video/main-video.webm" type="video/webm">
+										</video>
+										<img src="./assets/images/main/main-2.webp" alt="">
+									</div>
+									<div class="services-cases__content-item">
+										<img src="./assets/images/main/main-3.webp" alt="">
+									</div>
+									<div class="services-cases__content-item">
+										<img src="./assets/images/main/main-4.webp" alt="">
+									</div>
+								</div>
+								<div class="services-cases__content-item--null mobile">
+									<a class="services-cases__content-item--btn btn hover" href="#">show
+										more<span></span></a>
 								</div>
 							</div>
 						</div>
