--- a/src/main.html
+++ b/src/main.html
@@ -79,6 +79,24 @@
 								<div class="main-projects__content-item">
 									<img src="./assets/images/main/main-8.webp" alt="">
 								</div>
+								<div class="main-projects__content-hidden">
+									<div class="main-projects__content-item">
+										<img src="./assets/images/main/main-5.webp" alt="">
+									</div>
+									<div class="main-projects__content-item">
+										<img src="./assets/images/main/main-6.webp" alt="">
+									</div>
+									<div class="main-projects__content-item">
+										<video loop preload="auto" muted>
+											<source src="./assets/video/main-video.mp4" type="video/mp4">
+											<source src="./assets/video/main-video.webm" type="video/webm">
+										</video>
+										<img src="./assets/images/main/main-7.webp" alt="">
+									</div>
+									<div class="main-projects__content-item">
+										<img src="./assets/images/main/main-8.webp" alt="">
+									</div>
+								</div>
 								<div class="main-projects__content-item--null desktop">
 									<a class="main-projects__content-item--btn btn hover" href="#">show
 										more<span></span></a>
@@ -101,10 +119,62 @@
 								<div class="main-projects__content-item">
 									<img src="./assets/images/main/main-4.webp" alt="">
 								</div>
-								<div class="main-projects__content-item--null mobile">
-									<a class="main-projects__content-item--btn btn hover" href="#">show
-										more<span></span></a>
+								<div class="main-projects__content-hidden">
+									<div class="main-projects__content-item">
+										<img src="./assets/images/main/main-1.webp" alt="">
+									</div>
+									<div class="main-projects__content-item">
+										<video loop preload="auto" muted>
+											<source src="./assets/video/main-video.mp4" type="video/mp4">
+											<source src="./assets/video/main-video.webm" type="video/webm">
+										</video>
+										<img src="./assets/images/main/main-2.webp" alt="">
+									</div>
+									<div class="main-projects__content-item">
+										<img src="./assets/images/main/main-3.webp" alt="">
+									</div>
+									<div class="main-projects__content-item">
+										<img src="./assets/images/main/main-4.webp" alt="">
+									</div>
 								</div>
+							</div>
+							<div class="main-projects__content-hidden--mobile">
+								<div class="main-projects__content-item">
+									<img src="./assets/images/main/main-5.webp" alt="">
+								</div>
+								<div class="main-projects__content-item">
+									<img src="./assets/images/main/main-6.webp" alt="">
+								</div>
+								<div class="main-projects__content-item">
+									<video loop preload="auto" muted>
+										<source src="./assets/video/main-video.mp4" type="video/mp4">
+										<source src="./assets/video/main-video.webm" type="video/webm">
+									</video>
+									<img src="./assets/images/main/main-7.webp" alt="">
+								</div>
+								<div class="main-projects__content-item">
+									<img src="./assets/images/main/main-8.webp" alt="">
+								</div>
+								<div class="main-projects__content-item">
+									<img src="./assets/images/main/main-1.webp" alt="">
+								</div>
+								<div class="main-projects__content-item">
+									<video loop preload="auto" muted>
+										<source src="./assets/video/main-video.mp4" type="video/mp4">
+										<source src="./assets/video/main-video.webm" type="video/webm">
+									</video>
+									<img src="./assets/images/main/main-2.webp" alt="">
+								</div>
+								<div class="main-projects__content-item">
+									<img src="./assets/images/main/main-3.webp" alt="">
+								</div>
+								<div class="main-projects__content-item">
+									<img src="./assets/images/main/main-4.webp" alt="">
+								</div>
+							</div>
+							<div class="main-projects__content-item--null mobile">
+								<a class="main-projects__content-item--btn btn hover" href="#">show
+									more<span></span></a>
 							</div>
 						</div>
 						<div class="main-projects__btn-wrapper">
