fix: about page

--- a/src/about.html
+++ b/src/about.html
@@ -377,17 +377,19 @@
 									</div>
 								</div>
 								<div class="about-wedo__cards">
-									<div class="about-wedo__cards-img">
-										<img src="./assets/images/about/list-image-1.webp" alt="">
-									</div>
-									<div class="about-wedo__cards-img">
-										<img src="./assets/images/about/list-image-2.webp" alt="">
-									</div>
-									<div class="about-wedo__cards-img">
-										<img src="./assets/images/about/list-image-3.webp" alt="">
-									</div>
-									<div class="about-wedo__cards-img">
-										<img src="./assets/images/about/list-image-1.webp" alt="">
+									<div class="about-wedo__cards-wrapper">
+										<div class="about-wedo__cards-img">
+											<img src="./assets/images/about/list-image-1.webp" alt="">
+										</div>
+										<div class="about-wedo__cards-img">
+											<img src="./assets/images/about/list-image-2.webp" alt="">
+										</div>
+										<div class="about-wedo__cards-img">
+											<img src="./assets/images/about/list-image-3.webp" alt="">
+										</div>
+										<div class="about-wedo__cards-img">
+											<img src="./assets/images/about/list-image-1.webp" alt="">
+										</div>
 									</div>
 								</div>
 							</div>
