--- a/src/service-detail.html
+++ b/src/service-detail.html
@@ -85,17 +85,19 @@
 									<a class="services-banner__btn btn hover">send message<span></span></a>
 								</div>
 								<div class="services-banner__cards">
-									<div class="services-banner__cards-img active">
-										<img src="./assets/images/about/list-image-1.webp" alt="">
-									</div>
-									<div class="services-banner__cards-img">
-										<img src="./assets/images/about/list-image-2.webp" alt="">
-									</div>
-									<div class="services-banner__cards-img">
-										<img src="./assets/images/about/list-image-3.webp" alt="">
-									</div>
-									<div class="services-banner__cards-img">
-										<img src="./assets/images/about/list-image-1.webp" alt="">
+									<div class="services-banner__cards-wrapper">
+										<div class="services-banner__cards-img">
+											<img src="./assets/images/about/list-image-1.webp" alt="">
+										</div>
+										<div class="services-banner__cards-img">
+											<img src="./assets/images/about/list-image-2.webp" alt="">
+										</div>
+										<div class="services-banner__cards-img">
+											<img src="./assets/images/about/list-image-3.webp" alt="">
+										</div>
+										<div class="services-banner__cards-img">
+											<img src="./assets/images/about/list-image-1.webp" alt="">
+										</div>
 									</div>
 								</div>
 							</div>
@@ -188,39 +190,39 @@
 							<div class="services-cases__subtitle subtitle"><span></span> our cases</div>
 							<div class="services-cases__content">
 								<div class="services-cases__content-left">
-									<div class="services-cases__content-item">
+									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-5.webp" alt="">
-									</div>
-									<div class="services-cases__content-item">
+									</a>
+									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-6.webp" alt="">
-									</div>
-									<div class="services-cases__content-item">
+									</a>
+									<a class="services-cases__content-item" href="./project-detail.html">
 										<video loop preload="auto" muted>
 											<source src="./assets/video/main-video.mp4" type="video/mp4">
 											<source src="./assets/video/main-video.webm" type="video/webm">
 										</video>
 										<img src="./assets/images/main/main-7.webp" alt="">
-									</div>
-									<div class="services-cases__content-item">
+									</a>
+									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-8.webp" alt="">
-									</div>
+									</a>
 									<div class="services-cases__content-hidden">
-										<div class="services-cases__content-item">
+										<a class="services-cases__content-item" href="./project-detail.html">
 											<img src="./assets/images/main/main-5.webp" alt="">
-										</div>
-										<div class="services-cases__content-item">
+										</a>
+										<a class="services-cases__content-item" href="./project-detail.html">
 											<img src="./assets/images/main/main-6.webp" alt="">
-										</div>
-										<div class="services-cases__content-item">
+										</a>
+										<a class="services-cases__content-item" href="./project-detail.html">
 											<video loop preload="auto" muted>
 												<source src="./assets/video/main-video.mp4" type="video/mp4">
 												<source src="./assets/video/main-video.webm" type="video/webm">
 											</video>
 											<img src="./assets/images/main/main-7.webp" alt="">
-										</div>
-										<div class="services-cases__content-item">
+										</a>
+										<a class="services-cases__content-item" href="./project-detail.html">
 											<img src="./assets/images/main/main-8.webp" alt="">
-										</div>
+										</a>
 									</div>
 									<div class="services-cases__content-item--null desktop">
 										<a class="services-cases__content-item--btn btn hover" href="#">show
@@ -228,74 +230,74 @@
 									</div>
 								</div>
 								<div class="services-cases__content-right">
-									<div class="services-cases__content-item">
+									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-1.webp" alt="">
-									</div>
-									<div class="services-cases__content-item">
+									</a>
+									<a class="services-cases__content-item" href="./project-detail.html">
 										<video loop preload="auto" muted>
 											<source src="./assets/video/main-video.mp4" type="video/mp4">
 											<source src="./assets/video/main-video.webm" type="video/webm">
 										</video>
 										<img src="./assets/images/main/main-2.webp" alt="">
-									</div>
-									<div class="services-cases__content-item">
+									</a>
+									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-3.webp" alt="">
-									</div>
-									<div class="services-cases__content-item">
+									</a>
+									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-4.webp" alt="">
-									</div>
+									</a>
 									<div class="services-cases__content-hidden">
-										<div class="services-cases__content-item">
+										<a class="services-cases__content-item" href="./project-detail.html">
 											<img src="./assets/images/main/main-1.webp" alt="">
-										</div>
-										<div class="services-cases__content-item">
+										</a>
+										<a class="services-cases__content-item" href="./project-detail.html">
 											<video loop preload="auto" muted>
 												<source src="./assets/video/main-video.mp4" type="video/mp4">
 												<source src="./assets/video/main-video.webm" type="video/webm">
 											</video>
 											<img src="./assets/images/main/main-2.webp" alt="">
-										</div>
-										<div class="services-cases__content-item">
+										</a>
+										<a class="services-cases__content-item" href="./project-detail.html">
 											<img src="./assets/images/main/main-3.webp" alt="">
-										</div>
-										<div class="services-cases__content-item">
+										</a>
+										<a class="services-cases__content-item" href="./project-detail.html">
 											<img src="./assets/images/main/main-4.webp" alt="">
-										</div>
+										</a>
 									</div>
 								</div>
 								<div class="services-cases__content-hidden--mobile">
-									<div class="services-cases__content-item">
+									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-5.webp" alt="">
-									</div>
-									<div class="services-cases__content-item">
+									</a>
+									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-6.webp" alt="">
-									</div>
-									<div class="services-cases__content-item">
+									</a>
+									<a class="services-cases__content-item" href="./project-detail.html">
 										<video loop preload="auto" muted>
 											<source src="./assets/video/main-video.mp4" type="video/mp4">
 											<source src="./assets/video/main-video.webm" type="video/webm">
 										</video>
 										<img src="./assets/images/main/main-7.webp" alt="">
-									</div>
-									<div class="services-cases__content-item">
+									</a>
+									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-8.webp" alt="">
-									</div>
-									<div class="services-cases__content-item">
+									</a>
+									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-1.webp" alt="">
-									</div>
-									<div class="services-cases__content-item">
+									</a>
+									<a class="services-cases__content-item" href="./project-detail.html">
 										<video loop preload="auto" muted>
 											<source src="./assets/video/main-video.mp4" type="video/mp4">
 											<source src="./assets/video/main-video.webm" type="video/webm">
 										</video>
 										<img src="./assets/images/main/main-2.webp" alt="">
-									</div>
-									<div class="services-cases__content-item">
+									</a>
+									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-3.webp" alt="">
-									</div>
-									<div class="services-cases__content-item">
+									</a>
+									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-4.webp" alt="">
-									</div>
+									</a>
 								</div>
 								<div class="services-cases__content-item--null mobile">
 									<a class="services-cases__content-item--btn btn hover" href="#">show
