--- a/src/main.html
+++ b/src/main.html
@@ -63,39 +63,39 @@
 						<div class="main-projects__subtitle subtitle"><span></span> our cases</div>
 						<div class="main-projects__content">
 							<div class="main-projects__content-left">
-								<div class="main-projects__content-item">
+								<a class="main-projects__content-item" href="./project-detail.html">
 									<img src="./assets/images/main/main-5.webp" alt="">
-								</div>
-								<div class="main-projects__content-item">
+								</a>
+								<a class="main-projects__content-item" href="./project-detail.html">
 									<img src="./assets/images/main/main-6.webp" alt="">
-								</div>
-								<div class="main-projects__content-item">
+								</a>
+								<a class="main-projects__content-item" href="./project-detail.html">
 									<video loop preload="auto" muted>
 										<source src="./assets/video/main-video.mp4" type="video/mp4">
 										<source src="./assets/video/main-video.webm" type="video/webm">
 									</video>
 									<img src="./assets/images/main/main-7.webp" alt="">
-								</div>
-								<div class="main-projects__content-item">
+								</a>
+								<a class="main-projects__content-item" href="./project-detail.html">
 									<img src="./assets/images/main/main-8.webp" alt="">
-								</div>
+								</a>
 								<div class="main-projects__content-hidden">
-									<div class="main-projects__content-item">
+									<a class="main-projects__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-5.webp" alt="">
-									</div>
-									<div class="main-projects__content-item">
+									</a>
+									<a class="main-projects__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-6.webp" alt="">
-									</div>
-									<div class="main-projects__content-item">
+									</a>
+									<a class="main-projects__content-item" href="./project-detail.html">
 										<video loop preload="auto" muted>
 											<source src="./assets/video/main-video.mp4" type="video/mp4">
 											<source src="./assets/video/main-video.webm" type="video/webm">
 										</video>
 										<img src="./assets/images/main/main-7.webp" alt="">
-									</div>
-									<div class="main-projects__content-item">
+									</a>
+									<a class="main-projects__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-8.webp" alt="">
-									</div>
+									</a>
 								</div>
 								<div class="main-projects__content-item--null desktop">
 									<a class="main-projects__content-item--btn btn hover" href="#">show
@@ -103,74 +103,74 @@
 								</div>
 							</div>
 							<div class="main-projects__content-right">
-								<div class="main-projects__content-item">
+								<a class="main-projects__content-item" href="./project-detail.html">
 									<img src="./assets/images/main/main-1.webp" alt="">
-								</div>
-								<div class="main-projects__content-item">
+								</a>
+								<a class="main-projects__content-item" href="./project-detail.html">
 									<video loop preload="auto" muted>
 										<source src="./assets/video/main-video.mp4" type="video/mp4">
 										<source src="./assets/video/main-video.webm" type="video/webm">
 									</video>
 									<img src="./assets/images/main/main-2.webp" alt="">
-								</div>
-								<div class="main-projects__content-item">
+								</a>
+								<a class="main-projects__content-item" href="./project-detail.html">
 									<img src="./assets/images/main/main-3.webp" alt="">
-								</div>
-								<div class="main-projects__content-item">
+								</a>
+								<a class="main-projects__content-item" href="./project-detail.html">
 									<img src="./assets/images/main/main-4.webp" alt="">
-								</div>
+								</a>
 								<div class="main-projects__content-hidden">
-									<div class="main-projects__content-item">
+									<a class="main-projects__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-1.webp" alt="">
-									</div>
-									<div class="main-projects__content-item">
+									</a>
+									<a class="main-projects__content-item" href="./project-detail.html">
 										<video loop preload="auto" muted>
 											<source src="./assets/video/main-video.mp4" type="video/mp4">
 											<source src="./assets/video/main-video.webm" type="video/webm">
 										</video>
 										<img src="./assets/images/main/main-2.webp" alt="">
-									</div>
-									<div class="main-projects__content-item">
+									</a>
+									<a class="main-projects__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-3.webp" alt="">
-									</div>
-									<div class="main-projects__content-item">
+									</a>
+									<a class="main-projects__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-4.webp" alt="">
-									</div>
+									</a>
 								</div>
 							</div>
 							<div class="main-projects__content-hidden--mobile">
-								<div class="main-projects__content-item">
+								<a class="main-projects__content-item" href="./project-detail.html">
 									<img src="./assets/images/main/main-5.webp" alt="">
-								</div>
-								<div class="main-projects__content-item">
+								</a>
+								<a class="main-projects__content-item" href="./project-detail.html">
 									<img src="./assets/images/main/main-6.webp" alt="">
-								</div>
-								<div class="main-projects__content-item">
+								</a>
+								<a class="main-projects__content-item" href="./project-detail.html">
 									<video loop preload="auto" muted>
 										<source src="./assets/video/main-video.mp4" type="video/mp4">
 										<source src="./assets/video/main-video.webm" type="video/webm">
 									</video>
 									<img src="./assets/images/main/main-7.webp" alt="">
-								</div>
-								<div class="main-projects__content-item">
+								</a>
+								<a class="main-projects__content-item" href="./project-detail.html">
 									<img src="./assets/images/main/main-8.webp" alt="">
-								</div>
-								<div class="main-projects__content-item">
+								</a>
+								<a class="main-projects__content-item" href="./project-detail.html">
 									<img src="./assets/images/main/main-1.webp" alt="">
-								</div>
-								<div class="main-projects__content-item">
+								</a>
+								<a class="main-projects__content-item" href="./project-detail.html">
 									<video loop preload="auto" muted>
 										<source src="./assets/video/main-video.mp4" type="video/mp4">
 										<source src="./assets/video/main-video.webm" type="video/webm">
 									</video>
 									<img src="./assets/images/main/main-2.webp" alt="">
-								</div>
-								<div class="main-projects__content-item">
+								</a>
+								<a class="main-projects__content-item" href="./project-detail.html">
 									<img src="./assets/images/main/main-3.webp" alt="">
-								</div>
-								<div class="main-projects__content-item">
+								</a>
+								<a class="main-projects__content-item" href="./project-detail.html">
 									<img src="./assets/images/main/main-4.webp" alt="">
-								</div>
+								</a>
 							</div>
 							<div class="main-projects__content-item--null mobile">
 								<a class="main-projects__content-item--btn btn hover" href="#">show
